# fate-core

./: .gitignore  Main.py  README.md  pyproject.toml  requirements.txt
Code/: 2dhistogram.ipynb  Autocorrelation copy.ipynb  Autocorrelation.ipynb  Bargraphs.py  Bootstrapping test.ipynb  Bootstrapping_lat_variation.ipynb  Cleaning_data.ipynb  Cleaning_data.py  Cmens_meancurrent.ipynb  Cmens_testdata.ipynb  Combined_file_an.ipynb  CompairSpeeds.ipynb  Currents_profiles.ipynb  Dirrection.ipynb  Distribution_lat_lon.py  Divergence.ipynb  Divergencecals.py  Drifter_analysis.ipynb  Generate_quantiles.py  Krigging_field.py  Monthly_Trajectories.ipynb  Objective_analysis.ipynb  Objective_analysis_GPT.py  Parquet_to_csv.py  Pointwise_map_speed.py  Satlink_live_data.ipynb  Speed.ipynb  Sverdrup.ipynb  Testdoc.py  Testjupyter.ipynb  Wind Analysis.ipynb  Wind_bias_correction.py  active_dfads.ipynb  copernicus_Download.ipynb  dFADs_indomain.ipynb  forecast_errors_inital_mapping.ipynb  gpscordtime.ipynb  kriging_tests.ipynb  pdf.ipynb  powerpointplots.ipynb  (+1 more)
analysis/: 2dhistogram.ipynb  Autocorrelation.ipynb  Autocorrelation_combine_dynamical_pers_outputs.py  Bootstrapping_lat_variation.ipynb  Cmens_meancurrent.ipynb  Currents_profiles.ipynb  Divergence.ipynb  Krigging_field.py  Objective_analysis.ipynb  Optimal_forecast.ipynb  Output_analyze.ipynb  Select_initial_angle.py  Sverdrup.ipynb  Sverdrup.py  Wind Analysis.ipynb  active_dfads.ipynb  dFADs_indomain.ipynb  parcles_test.ipynb  pdf.ipynb
data_download/: Combine_cmems_data.py  Combine_process_ERA5.py  ERA5_download.ipynb  (+2 more)
(+110 files in other folders)
